ICG phase/y.output
Terminals unused in grammar

   T_LIBRARY
   T_IN
   T_BY
   T_LENGTHOUT
   T_MOD
   T_MMOD
   T_COPEN
   T_SEQOPEN
   '<'
   '>'
   '='


Grammar

    0 $accept: Q $end

    1 $@1: %empty

    2 Q: $@1 S

    3 S: WHILE S
    4  | IF S
    5  | REPEAT S
    6  | BREAK S
    7  | EXP S
    8  | T_PRINT '(' ITEM ')' T_NL S
    9  | T_CO N S T_CC T_NL S
   10  | error T_NL S
   11  | %empty

   12 $@2: %empty

   13 $@3: %empty

   14 $@4: %empty

   15 WHILE: T_WHILE N $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

   16 $@5: %empty

   17 $@6: %empty

   18 REPEAT: T_REPEAT $@5 N T_CO N S T_CC $@6 T_NL

   19 $@7: %empty

   20 BREAK: T_BREAK $@7 T_NL

   21 $@8: %empty

   22 IF: T_IF N '(' N COND N ')' $@8 N T_CO NIF

   23 NIF: N S T_CC T_NL

   24 $@9: %empty

   25 NIF: N S T_CC T_NL $@9 E

   26 $@10: %empty

   27 $@11: %empty

   28 E: T_ELSE $@10 T_IF N '(' N COND N ')' $@11 N T_CO N S T_CC T_NL EIF

   29 $@12: %empty

   30 E: T_ELSE $@12 N T_CO N S T_CC T_NL

   31 EIF: E
   32    | %empty

   33 $@13: %empty

   34 EXP: K RELOP K $@13 T_NL

   35 $@14: %empty

   36 EXP: ID ASSIGNOP K $@14 T_NL
   37    | K T_NL

   38 COND: K RELOP K
   39     | ID ASSIGNOP K
   40     | K LOGICOP K
   41     | K

   42 @15: %empty

   43 K: K T_ADD @15 L

   44 @16: %empty

   45 K: K T_SUB @16 L
   46  | L

   47 @17: %empty

   48 L: L T_MUL @17 O

   49 @18: %empty

   50 L: L T_DIV @18 O
   51  | O

   52 O: ID
   53  | NUM
   54  | '(' K ')'
   55  | ID '[' INDEX ']'

   56 INDEX: NUM ',' INDEX
   57      | ID ',' INDEX
   58      | NUM
   59      | ID

   60 RELOP: T_LT
   61      | T_GT
   62      | T_EE
   63      | T_LE
   64      | T_GE
   65      | T_NE

   66 ASSIGNOP: T_EQ
   67         | T_LA
   68         | T_RA

   69 LOGICOP: T_AND
   70        | T_OR

   71 ITEM: NUM
   72     | BOOL
   73     | STR
   74     | PASTE
   75     | ID

   76 PASTE: T_PASTEO '(' PASTEIN ')'

   77 PASTEIN: STR ',' PASTEIN
   78        | ID ',' PASTEIN
   79        | %empty

   80 N: T_NL
   81  | %empty

   82 NUM: T_NUM

   83 BOOL: T_TRUE
   84     | T_FALSE

   85 STR: T_STR

   86 ID: T_ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 15 22 28 54 76
')' (41) 8 15 22 28 54 76
',' (44) 56 57 77 78
'<' (60)
'=' (61)
'>' (62)
'[' (91) 55
']' (93) 55
error (256) 10
T_LIBRARY (258)
T_NL (259) 8 9 10 15 18 20 23 25 28 30 34 36 37 80
T_PRINT (260) 8
T_WHILE (261) 15
T_IF (262) 22 28
T_BREAK (263) 20
T_REPEAT (264) 18
T_IN (265)
T_ELSE (266) 28 30
T_BY (267)
T_LENGTHOUT (268)
T_PASTEO (269) 76
T_TRUE (270) 83
T_FALSE (271) 84
T_MOD (272)
T_MMOD (273)
T_NUM (274) 82
T_STR (275) 85
T_ID (276) 86
T_COPEN (277)
T_SEQOPEN (278)
T_CO (279) 9 15 18 22 28 30
T_CC (280) 9 15 18 23 25 28 30
T_ADD (281) 43
T_SUB (282) 45
T_MUL (283) 48
T_DIV (284) 50
T_GT (285) 61
T_LT (286) 60
T_EQ (287) 66
T_AND (288) 69
T_OR (289) 70
T_LE (290) 63
T_GE (291) 64
T_EE (292) 62
T_NE (293) 65
T_RA (294) 68
T_LA (295) 67


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Q (50)
    on left: 2, on right: 0
$@1 (51)
    on left: 1, on right: 2
S (52)
    on left: 3 4 5 6 7 8 9 10 11, on right: 2 3 4 5 6 7 8 9 10 15 18
    23 25 28 30
WHILE (53)
    on left: 15, on right: 3
$@2 (54)
    on left: 12, on right: 15
$@3 (55)
    on left: 13, on right: 15
$@4 (56)
    on left: 14, on right: 15
REPEAT (57)
    on left: 18, on right: 5
$@5 (58)
    on left: 16, on right: 18
$@6 (59)
    on left: 17, on right: 18
BREAK (60)
    on left: 20, on right: 6
$@7 (61)
    on left: 19, on right: 20
IF (62)
    on left: 22, on right: 4
$@8 (63)
    on left: 21, on right: 22
NIF (64)
    on left: 23 25, on right: 22
$@9 (65)
    on left: 24, on right: 25
E (66)
    on left: 28 30, on right: 25 31
$@10 (67)
    on left: 26, on right: 28
$@11 (68)
    on left: 27, on right: 28
$@12 (69)
    on left: 29, on right: 30
EIF (70)
    on left: 31 32, on right: 28
EXP (71)
    on left: 34 36 37, on right: 7
$@13 (72)
    on left: 33, on right: 34
$@14 (73)
    on left: 35, on right: 36
COND (74)
    on left: 38 39 40 41, on right: 15 22 28
K (75)
    on left: 43 45 46, on right: 34 36 37 38 39 40 41 43 45 54
@15 (76)
    on left: 42, on right: 43
@16 (77)
    on left: 44, on right: 45
L (78)
    on left: 48 50 51, on right: 43 45 46 48 50
@17 (79)
    on left: 47, on right: 48
@18 (80)
    on left: 49, on right: 50
O (81)
    on left: 52 53 54 55, on right: 48 50 51
INDEX (82)
    on left: 56 57 58 59, on right: 55 56 57
RELOP (83)
    on left: 60 61 62 63 64 65, on right: 34 38
ASSIGNOP (84)
    on left: 66 67 68, on right: 36 39
LOGICOP (85)
    on left: 69 70, on right: 40
ITEM (86)
    on left: 71 72 73 74 75, on right: 8
PASTE (87)
    on left: 76, on right: 74
PASTEIN (88)
    on left: 77 78 79, on right: 76 77 78
N (89)
    on left: 80 81, on right: 9 15 18 22 23 25 28 30
NUM (90)
    on left: 82, on right: 53 56 58 71
BOOL (91)
    on left: 83 84, on right: 72
STR (92)
    on left: 85, on right: 73 77
ID (93)
    on left: 86, on right: 36 39 52 55 57 59 75 78


State 0

    0 $accept: . Q $end

    $default  reduce using rule 1 ($@1)

    Q    go to state 1
    $@1  go to state 2


State 1

    0 $accept: Q . $end

    $end  shift, and go to state 3


State 2

    2 Q: $@1 . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)

    S       go to state 14
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 3

    0 $accept: Q $end .

    $default  accept


State 4

   10 S: error . T_NL S

    T_NL  shift, and go to state 25


State 5

    8 S: T_PRINT . '(' ITEM ')' T_NL S

    '('  shift, and go to state 26


State 6

   15 WHILE: T_WHILE . N $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 28


State 7

   22 IF: T_IF . N '(' N COND N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 29


State 8

   20 BREAK: T_BREAK . $@7 T_NL

    $default  reduce using rule 19 ($@7)

    $@7  go to state 30


State 9

   18 REPEAT: T_REPEAT . $@5 N T_CO N S T_CC $@6 T_NL

    $default  reduce using rule 16 ($@5)

    $@5  go to state 31


State 10

   82 NUM: T_NUM .

    $default  reduce using rule 82 (NUM)


State 11

   86 ID: T_ID .

    $default  reduce using rule 86 (ID)


State 12

    9 S: T_CO . N S T_CC T_NL S

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 32


State 13

   54 O: '(' . K ')'

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 33
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 14

    2 Q: $@1 S .

    $default  reduce using rule 2 (Q)


State 15

    3 S: WHILE . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 35
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 16

    5 S: REPEAT . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 36
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 17

    6 S: BREAK . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 37
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 18

    4 S: IF . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 38
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 19

    7 S: EXP . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 39
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 20

   34 EXP: K . RELOP K $@13 T_NL
   37    | K . T_NL
   43 K: K . T_ADD @15 L
   45  | K . T_SUB @16 L

    T_NL   shift, and go to state 40
    T_ADD  shift, and go to state 41
    T_SUB  shift, and go to state 42
    T_GT   shift, and go to state 43
    T_LT   shift, and go to state 44
    T_LE   shift, and go to state 45
    T_GE   shift, and go to state 46
    T_EE   shift, and go to state 47
    T_NE   shift, and go to state 48

    RELOP  go to state 49


State 21

   46 K: L .
   48 L: L . T_MUL @17 O
   50  | L . T_DIV @18 O

    T_MUL  shift, and go to state 50
    T_DIV  shift, and go to state 51

    $default  reduce using rule 46 (K)


State 22

   51 L: O .

    $default  reduce using rule 51 (L)


State 23

   53 O: NUM .

    $default  reduce using rule 53 (O)


State 24

   36 EXP: ID . ASSIGNOP K $@14 T_NL
   52 O: ID .
   55  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 52
    T_RA  shift, and go to state 53
    T_LA  shift, and go to state 54
    '['   shift, and go to state 55

    $default  reduce using rule 52 (O)

    ASSIGNOP  go to state 56


State 25

   10 S: error T_NL . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 57
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 26

    8 S: T_PRINT '(' . ITEM ')' T_NL S

    T_PASTEO  shift, and go to state 58
    T_TRUE    shift, and go to state 59
    T_FALSE   shift, and go to state 60
    T_NUM     shift, and go to state 10
    T_STR     shift, and go to state 61
    T_ID      shift, and go to state 11

    ITEM   go to state 62
    PASTE  go to state 63
    NUM    go to state 64
    BOOL   go to state 65
    STR    go to state 66
    ID     go to state 67


State 27

   80 N: T_NL .

    $default  reduce using rule 80 (N)


State 28

   15 WHILE: T_WHILE N . $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    $default  reduce using rule 12 ($@2)

    $@2  go to state 68


State 29

   22 IF: T_IF N . '(' N COND N ')' $@8 N T_CO NIF

    '('  shift, and go to state 69


State 30

   20 BREAK: T_BREAK $@7 . T_NL

    T_NL  shift, and go to state 70


State 31

   18 REPEAT: T_REPEAT $@5 . N T_CO N S T_CC $@6 T_NL

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 71


State 32

    9 S: T_CO N . S T_CC T_NL S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    T_CC  reduce using rule 11 (S)

    S       go to state 72
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 33

   43 K: K . T_ADD @15 L
   45  | K . T_SUB @16 L
   54 O: '(' K . ')'

    T_ADD  shift, and go to state 41
    T_SUB  shift, and go to state 42
    ')'    shift, and go to state 73


State 34

   52 O: ID .
   55  | ID . '[' INDEX ']'

    '['  shift, and go to state 55

    $default  reduce using rule 52 (O)


State 35

    3 S: WHILE S .

    $default  reduce using rule 3 (S)


State 36

    5 S: REPEAT S .

    $default  reduce using rule 5 (S)


State 37

    6 S: BREAK S .

    $default  reduce using rule 6 (S)


State 38

    4 S: IF S .

    $default  reduce using rule 4 (S)


State 39

    7 S: EXP S .

    $default  reduce using rule 7 (S)


State 40

   37 EXP: K T_NL .

    $default  reduce using rule 37 (EXP)


State 41

   43 K: K T_ADD . @15 L

    $default  reduce using rule 42 (@15)

    @15  go to state 74


State 42

   45 K: K T_SUB . @16 L

    $default  reduce using rule 44 (@16)

    @16  go to state 75


State 43

   61 RELOP: T_GT .

    $default  reduce using rule 61 (RELOP)


State 44

   60 RELOP: T_LT .

    $default  reduce using rule 60 (RELOP)


State 45

   63 RELOP: T_LE .

    $default  reduce using rule 63 (RELOP)


State 46

   64 RELOP: T_GE .

    $default  reduce using rule 64 (RELOP)


State 47

   62 RELOP: T_EE .

    $default  reduce using rule 62 (RELOP)


State 48

   65 RELOP: T_NE .

    $default  reduce using rule 65 (RELOP)


State 49

   34 EXP: K RELOP . K $@13 T_NL

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 76
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 50

   48 L: L T_MUL . @17 O

    $default  reduce using rule 47 (@17)

    @17  go to state 77


State 51

   50 L: L T_DIV . @18 O

    $default  reduce using rule 49 (@18)

    @18  go to state 78


State 52

   66 ASSIGNOP: T_EQ .

    $default  reduce using rule 66 (ASSIGNOP)


State 53

   68 ASSIGNOP: T_RA .

    $default  reduce using rule 68 (ASSIGNOP)


State 54

   67 ASSIGNOP: T_LA .

    $default  reduce using rule 67 (ASSIGNOP)


State 55

   55 O: ID '[' . INDEX ']'

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11

    INDEX  go to state 79
    NUM    go to state 80
    ID     go to state 81


State 56

   36 EXP: ID ASSIGNOP . K $@14 T_NL

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 82
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 57

   10 S: error T_NL S .

    $default  reduce using rule 10 (S)


State 58

   76 PASTE: T_PASTEO . '(' PASTEIN ')'

    '('  shift, and go to state 83


State 59

   83 BOOL: T_TRUE .

    $default  reduce using rule 83 (BOOL)


State 60

   84 BOOL: T_FALSE .

    $default  reduce using rule 84 (BOOL)


State 61

   85 STR: T_STR .

    $default  reduce using rule 85 (STR)


State 62

    8 S: T_PRINT '(' ITEM . ')' T_NL S

    ')'  shift, and go to state 84


State 63

   74 ITEM: PASTE .

    $default  reduce using rule 74 (ITEM)


State 64

   71 ITEM: NUM .

    $default  reduce using rule 71 (ITEM)


State 65

   72 ITEM: BOOL .

    $default  reduce using rule 72 (ITEM)


State 66

   73 ITEM: STR .

    $default  reduce using rule 73 (ITEM)


State 67

   75 ITEM: ID .

    $default  reduce using rule 75 (ITEM)


State 68

   15 WHILE: T_WHILE N $@2 . '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    '('  shift, and go to state 85


State 69

   22 IF: T_IF N '(' . N COND N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 86


State 70

   20 BREAK: T_BREAK $@7 T_NL .

    $default  reduce using rule 20 (BREAK)


State 71

   18 REPEAT: T_REPEAT $@5 N . T_CO N S T_CC $@6 T_NL

    T_CO  shift, and go to state 87


State 72

    9 S: T_CO N S . T_CC T_NL S

    T_CC  shift, and go to state 88


State 73

   54 O: '(' K ')' .

    $default  reduce using rule 54 (O)


State 74

   43 K: K T_ADD @15 . L

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    L    go to state 89
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 75

   45 K: K T_SUB @16 . L

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    L    go to state 90
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 76

   34 EXP: K RELOP K . $@13 T_NL
   43 K: K . T_ADD @15 L
   45  | K . T_SUB @16 L

    T_ADD  shift, and go to state 41
    T_SUB  shift, and go to state 42

    $default  reduce using rule 33 ($@13)

    $@13  go to state 91


State 77

   48 L: L T_MUL @17 . O

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    O    go to state 92
    NUM  go to state 23
    ID   go to state 34


State 78

   50 L: L T_DIV @18 . O

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    O    go to state 93
    NUM  go to state 23
    ID   go to state 34


State 79

   55 O: ID '[' INDEX . ']'

    ']'  shift, and go to state 94


State 80

   56 INDEX: NUM . ',' INDEX
   58      | NUM .

    ','  shift, and go to state 95

    $default  reduce using rule 58 (INDEX)


State 81

   57 INDEX: ID . ',' INDEX
   59      | ID .

    ','  shift, and go to state 96

    $default  reduce using rule 59 (INDEX)


State 82

   36 EXP: ID ASSIGNOP K . $@14 T_NL
   43 K: K . T_ADD @15 L
   45  | K . T_SUB @16 L

    T_ADD  shift, and go to state 41
    T_SUB  shift, and go to state 42

    $default  reduce using rule 35 ($@14)

    $@14  go to state 97


State 83

   76 PASTE: T_PASTEO '(' . PASTEIN ')'

    T_STR  shift, and go to state 61
    T_ID   shift, and go to state 11

    $default  reduce using rule 79 (PASTEIN)

    PASTEIN  go to state 98
    STR      go to state 99
    ID       go to state 100


State 84

    8 S: T_PRINT '(' ITEM ')' . T_NL S

    T_NL  shift, and go to state 101


State 85

   15 WHILE: T_WHILE N $@2 '(' . N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 102


State 86

   22 IF: T_IF N '(' N . COND N ')' $@8 N T_CO NIF

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    COND  go to state 103
    K     go to state 104
    L     go to state 21
    O     go to state 22
    NUM   go to state 23
    ID    go to state 105


State 87

   18 REPEAT: T_REPEAT $@5 N T_CO . N S T_CC $@6 T_NL

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 106


State 88

    9 S: T_CO N S T_CC . T_NL S

    T_NL  shift, and go to state 107


State 89

   43 K: K T_ADD @15 L .
   48 L: L . T_MUL @17 O
   50  | L . T_DIV @18 O

    T_MUL  shift, and go to state 50
    T_DIV  shift, and go to state 51

    $default  reduce using rule 43 (K)


State 90

   45 K: K T_SUB @16 L .
   48 L: L . T_MUL @17 O
   50  | L . T_DIV @18 O

    T_MUL  shift, and go to state 50
    T_DIV  shift, and go to state 51

    $default  reduce using rule 45 (K)


State 91

   34 EXP: K RELOP K $@13 . T_NL

    T_NL  shift, and go to state 108


State 92

   48 L: L T_MUL @17 O .

    $default  reduce using rule 48 (L)


State 93

   50 L: L T_DIV @18 O .

    $default  reduce using rule 50 (L)


State 94

   55 O: ID '[' INDEX ']' .

    $default  reduce using rule 55 (O)


State 95

   56 INDEX: NUM ',' . INDEX

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11

    INDEX  go to state 109
    NUM    go to state 80
    ID     go to state 81


State 96

   57 INDEX: ID ',' . INDEX

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11

    INDEX  go to state 110
    NUM    go to state 80
    ID     go to state 81


State 97

   36 EXP: ID ASSIGNOP K $@14 . T_NL

    T_NL  shift, and go to state 111


State 98

   76 PASTE: T_PASTEO '(' PASTEIN . ')'

    ')'  shift, and go to state 112


State 99

   77 PASTEIN: STR . ',' PASTEIN

    ','  shift, and go to state 113


State 100

   78 PASTEIN: ID . ',' PASTEIN

    ','  shift, and go to state 114


State 101

    8 S: T_PRINT '(' ITEM ')' T_NL . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 115
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 102

   15 WHILE: T_WHILE N $@2 '(' N . COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    COND  go to state 116
    K     go to state 104
    L     go to state 21
    O     go to state 22
    NUM   go to state 23
    ID    go to state 105


State 103

   22 IF: T_IF N '(' N COND . N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 117


State 104

   38 COND: K . RELOP K
   40     | K . LOGICOP K
   41     | K .
   43 K: K . T_ADD @15 L
   45  | K . T_SUB @16 L

    T_ADD  shift, and go to state 41
    T_SUB  shift, and go to state 42
    T_GT   shift, and go to state 43
    T_LT   shift, and go to state 44
    T_AND  shift, and go to state 118
    T_OR   shift, and go to state 119
    T_LE   shift, and go to state 45
    T_GE   shift, and go to state 46
    T_EE   shift, and go to state 47
    T_NE   shift, and go to state 48

    $default  reduce using rule 41 (COND)

    RELOP    go to state 120
    LOGICOP  go to state 121


State 105

   39 COND: ID . ASSIGNOP K
   52 O: ID .
   55  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 52
    T_RA  shift, and go to state 53
    T_LA  shift, and go to state 54
    '['   shift, and go to state 55

    $default  reduce using rule 52 (O)

    ASSIGNOP  go to state 122


State 106

   18 REPEAT: T_REPEAT $@5 N T_CO N . S T_CC $@6 T_NL

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    T_CC  reduce using rule 11 (S)

    S       go to state 123
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 107

    9 S: T_CO N S T_CC T_NL . S

    error     shift, and go to state 4
    T_PRINT   shift, and go to state 5
    T_WHILE   shift, and go to state 6
    T_IF      shift, and go to state 7
    T_BREAK   shift, and go to state 8
    T_REPEAT  shift, and go to state 9
    T_NUM     shift, and go to state 10
    T_ID      shift, and go to state 11
    T_CO      shift, and go to state 12
    '('       shift, and go to state 13

    $end  reduce using rule 11 (S)
    T_CC  reduce using rule 11 (S)

    S       go to state 124
    WHILE   go to state 15
    REPEAT  go to state 16
    BREAK   go to state 17
    IF      go to state 18
    EXP     go to state 19
    K       go to state 20
    L       go to state 21
    O       go to state 22
    NUM     go to state 23
    ID      go to state 24


State 108

   34 EXP: K RELOP K $@13 T_NL .

    $default  reduce using rule 34 (EXP)


State 109

   56 INDEX: NUM ',' INDEX .

    $default  reduce using rule 56 (INDEX)


State 110

   57 INDEX: ID ',' INDEX .

    $default  reduce using rule 57 (INDEX)


State 111

   36 EXP: ID ASSIGNOP K $@14 T_NL .

    $default  reduce using rule 36 (EXP)


State 112

   76 PASTE: T_PASTEO '(' PASTEIN ')' .

    $default  reduce using rule 76 (PASTE)


State 113

   77 PASTEIN: STR ',' . PASTEIN

    T_STR  shift, and go to state 61
    T_ID   shift, and go to state 11

    $default  reduce using rule 79 (PASTEIN)

    PASTEIN  go to state 125
    STR      go to state 99
    ID       go to state 100


State 114

   78 PASTEIN: ID ',' . PASTEIN

    T_STR  shift, and go to state 61
    T_ID   shift, and go to state 11

    $default  reduce using rule 79 (PASTEIN)

    PASTEIN  go to state 126
    STR      go to state 99
    ID       go to state 100


State 115

    8 S: T_PRINT '(' ITEM ')' T_NL S .

    $default  reduce using rule 8 (S)


State 116

   15 WHILE: T_WHILE N $@2 '(' N COND . N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 27

    $default  reduce using rule 81 (N)

    N  go to state 127


State 117

   22 IF: T_IF N '(' N COND N . ')' $@8 N T_CO NIF

    ')'  shift, and go to state 128


State 118

   69 LOGICOP: T_AND .

    $default  reduce using rule 69 (LOGICOP)


State 119

   70 LOGICOP: T_OR .

    $default  reduce using rule 70 (LOGICOP)


State 120

   38 COND: K RELOP . K

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 129
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 121

   40 COND: K LOGICOP . K

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 130
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 122

   39 COND: ID ASSIGNOP . K

    T_NUM  shift, and go to state 10
    T_ID   shift, and go to state 11
    '('    shift, and go to state 13

    K    go to state 131
    L    go to state 21
    O    go to state 22
    NUM  go to state 23
    ID   go to state 34


State 123

   18 REPEAT: T_REPEAT $@5 N T_CO N S . T_CC $@6 T_NL

    T_CC  shift, and go to state 132


State 124

    9 S: T_CO N S T_CC T_NL S .

    $default  reduce using rule 9 (S)


State 125

   77 PASTEIN: STR ',' PASTEIN .
